# win-text-inject

./: CHANGELOG.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
.github/workflows/: ci.yml
examples/: clipboard_privacy.rs  fake_clipboard_manager.rs  real_app_test.rs  repro_502.rs  watcher_probe.rs
src/: clipboard.rs  delayed.rs  lib.rs  modifiers.rs  sendinput.rs  target.rs
