[package]
name = "win-text-inject"
version = "0.1.1"
edition = "2021"
rust-version = "1.82"
license = "MIT OR Apache-2.0"
description = "Deliver text into the focused Windows application correctly: clipboard privacy formats, modifier sanitization, integrity-level checks, and a delayed-render restore that does not race the target's read."
repository = "https://github.com/emerson-d-lopes/win-text-inject"
documentation = "https://docs.rs/win-text-inject"
readme = "README.md"
keywords = ["windows", "clipboard", "sendinput", "dictation", "accessibility"]
categories = ["os::windows-apis", "text-processing"]
exclude = ["/.github"]

[package.metadata.docs.rs]
default-target = "x86_64-pc-windows-msvc"
targets = ["x86_64-pc-windows-msvc"]

[target.'cfg(windows)'.dependencies]
windows = { version = "0.61", features = [
    "Win32_Foundation",
    "Win32_System_DataExchange",
    "Win32_System_Memory",
    "Win32_System_LibraryLoader",
    "Win32_Graphics_Gdi",
    "Win32_System_Threading",
    "Win32_Security",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_WindowsAndMessaging",
] }

# The examples build real Win32 windows and drive real applications.
[target.'cfg(windows)'.dev-dependencies]
windows = { version = "0.61", features = ["Win32_Graphics_Gdi"] }
